Restore to blank template

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint": "^6.8.0",
         "prettier": "^1.19.1",
         "renative-template-hello-world": "0.28.17",
-        "rnv": "0.28.17"
+        "rnv": "0.28.17",
+        "renative-template-blank": "latest"
     }
 }
